--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,21 @@
 .logoOCJ {
 	max-width: 150px;
 }
+
+.dropdown-submenu {
+  position: relative;
+}
+
+.dropdown-submenu>a:after {
+  /*content: "\f0da";*/
+  /*float: right;*/
+  border: none;
+  /*font-family: 'FontAwesome';*/
+}
+
+.dropdown-submenu>.dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-top: 0px;
+  margin-left: 0px;
+}
